--- a/online.html
+++ b/online.html
@@ -20,7 +20,6 @@
 
         .section-title {
             font-size: 36px;
-            margin-left: -28px;
         }
         .container1
         {
@@ -28,6 +27,7 @@
             flex-direction: column;
             padding-top: 20px;
             padding-bottom: 20px;
+            background-color: rgb(240, 229, 229);
         }
 
         .cards-container1 {
@@ -41,7 +41,7 @@
 
         /* Training Cards */
         .card {
-            background-color: rgb(240, 229, 229);
+            
             border-radius: 10px;
             width: 300px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -153,15 +153,15 @@
         <div class="logo">Epontee</div>
         <ul class="navbar">
             <li class="dropdown">
-                <a href="javascript:void(0)" class="dropbtn">Trainings</a>
+                <a href="javascript:void(0)" class="dropbtn">Trainings ▼</a>
                 <ul class="dropdown-content">
-                  <li><a href="classroom.html" class="menu-item">Classroom</a></li>
+                  <li><a href="classroom.html" class="menu-item">Classroom ►</a></li>
                   <li><a href="online.html" class="menu-item">Online</a></li>
-                  <li><a href="corporate.html" class="menu-item">Corporate</a></li>
-                  <li><a href="project.html" class="menu-item">Project</a></li>
+                  <li><a href="corporate.html" class="menu-item">Corporate ►</a></li>
+                  <li><a href="project.html" class="menu-item">Project ►</a></li>
                 </ul>
               </li>
-            <li><a href="index.html" class="menu-item">Back</a></li>
+            <li><a href="index.html" class="menu-item">◄ Back</a></li>
         </ul>
     </nav>
     
