--- a/classroom.html
+++ b/classroom.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Class Room</title>
-
     <link rel="stylesheet" href="index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -21,7 +20,6 @@
 
         .section-title {
             font-size: 36px;
-            margin-left: -28px;
         }
         .container1
         {
@@ -29,6 +27,7 @@
             flex-direction: column;
             padding-top: 20px;
             padding-bottom: 20px;
+            background-color: rgb(240, 229, 229);
         }
 
         .cards-container1 {
@@ -42,7 +41,7 @@
 
         /* Training Cards */
         .card {
-            background-color: rgb(240, 229, 229);
+            
             border-radius: 10px;
             width: 300px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -152,15 +151,15 @@
         <div class="logo">Epontee</div>
         <ul class="navbar">
             <li class="dropdown">
-                <a href="javascript:void(0)" class="dropbtn">Trainings</a>
+                <a href="javascript:void(0)" class="dropbtn">Trainings ▼</a>
                 <ul class="dropdown-content">
                   <li><a href="classroom.html" class="menu-item">Classroom</a></li>
-                  <li><a href="online.html" class="menu-item">Online</a></li>
-                  <li><a href="corporate.html" class="menu-item">Corporate</a></li>
-                  <li><a href="project.html" class="menu-item">Project</a></li>
+                  <li><a href="online.html" class="menu-item">Online ►</a></li>
+                  <li><a href="corporate.html" class="menu-item">Corporate ►</a></li>
+                  <li><a href="project.html" class="menu-item">Project ►</a></li>
                 </ul>
               </li>
-            <li><a href="index.html" class="menu-item">Back</a></li>
+            <li><a href="index.html" class="menu-item">◄ Back</a></li>
         </ul>
     </nav>
 
